2005-03-20 Takuro Ashie <ashie@homa.nejp>

	* src/scim_canna_imengine.cpp: Register empty PropertyList to clear
	tollbar.

2005-03-20 Takuro Ashie <ashie@homa.ne.jp>

	* Initial import into CVS.