@@ -1,4 +1,11 @@
-2005-03-20 Takuro Ashie <ashie@homa.nejp>
+2005-03-21 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/canna_jrkanji.cpp, src/canna_jrkanji.h,
+	  src/scim_canna_imengine.cpp:
+	Create a canna context per each CannaInstance.
+	Show property label.
+
+2005-03-20 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/scim_canna_imengine.cpp: Register empty PropertyList to clear
 	tollbar.
